Update behavior and structure of desing system

--- a/src/components/atoms/Icon/Icon.stories.mdx
+++ b/src/components/atoms/Icon/Icon.stories.mdx
@@ -21,15 +21,23 @@ Let's define a story for our `Icon` component:
 
 <Preview>
   <Story name="chevronUp">
-    <><Icon name="chevronUp" /><br /><small>chevronUp</small></>
+    <Icon name="chevronUp" />
+    <br />
+    <small>chevronUp</small>
   </Story>
   <Story name="chevronRight">
-    <><Icon name="chevronRight" /><br /><small>chevronRight</small></>
+    <Icon name="chevronRight" />
+    <br />
+    <small>chevronRight</small>
   </Story>
   <Story name="chevronDown">
-    <><Icon name="chevronDown" /><br /><small>chevronDown</small></>
+    <Icon name="chevronDown" />
+    <br />
+    <small>chevronDown</small>
   </Story>
   <Story name="chevronLeft">
-    <><Icon name="chevronLeft" /><br /><small>chevronLeft</small></>
+    <Icon name="chevronLeft" />
+    <br />
+    <small>chevronLeft</small>
   </Story>
 </Preview>
