--- a/src/docs/Intro.stories.mdx
+++ b/src/docs/Intro.stories.mdx
@@ -1,18 +1,47 @@
-import {Meta, Props, Story, Preview} from '@storybook/addon-docs/blocks'
+import {Meta, Preview} from '@storybook/addon-docs/blocks'
+import Heading from '../components/atoms/Heading'
 import FormField from '../components/molecules/FormField'
 import Datepicker from '../components/molecules/Datepicker'
 import Button from '../components/atoms/Button'
 
 <Meta title="Design System/Intro" />
 
-# Design system of Adevinta
+# Welcome to Adevinta Design System
 
-Lorem ipsum dolor sit amet
+Adevinta Design System is an open-source, high-quality library of reusable React components that empower teams to craft any product with ease.
 
-<Story name="form">
+<br />
+<br />
+
+## Example of use a developed components:
+
+> This is a simple form to use a datepicker in a context...
+
+<Preview>
   <form>
+    <Heading>Default form</Heading>
     <FormField label="Name" />
     <Datepicker label="Date of birth" />
+    <br />
+    <br />
     <Button type="submit">Submit</Button>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
   </form>
-</Story>
+</Preview>
