--- a/src/components/atoms/label/__stories__/label.stories.mdx
+++ b/src/components/atoms/label/__stories__/label.stories.mdx
@@ -1,14 +1,20 @@
 import {Meta, Props, Story, Preview} from '@storybook/addon-docs/blocks'
-import Label from '.'
+import {text} from '@storybook/addon-knobs'
+import Label from '..'
+
+export const knobsProps = () => ({
+  text: text('text', 'Default label'),
+  name: text('name', 'default-label')
+})
 
 <Meta title="Atoms/Label" component={Label} />
 
 # Label
 
-Let's define a story for our `Label` component:
+The `Label` is the name of the associated field, that explains what is the about. It should be clear, concise and short.
 
 <Preview>
-  <Story name="default">
+  <Story name="Default">
     <Label text="Default label" name="default-label" />
   </Story>
 </Preview>
@@ -16,3 +22,13 @@ Let's define a story for our `Label` component:
 ## Props
 
 <Props of={Label} />
+
+## Stories
+
+### Knobs
+
+<Preview>
+  <Story name="Knobs">
+    <Label {...knobsProps()} />
+  </Story>
+</Preview>
