--- a/src/components/atoms/button/__stories__/button.stories.mdx
+++ b/src/components/atoms/button/__stories__/button.stories.mdx
@@ -1,5 +1,5 @@
 import {Meta, Props, Story, Preview} from '@storybook/addon-docs/blocks'
-import Button from '.'
+import Button from '..'
 
 <Meta title="Atoms/Button" component={Button} />
 
@@ -8,7 +8,7 @@ import Button from '.'
 Let's define a story for our `Button` component:
 
 <Preview>
-  <Story name="default">
+  <Story name="Default">
     <Button>Default button</Button>
   </Story>
 </Preview>
