--- a/src/components/atoms/popover/__stories__/popover.stories.mdx
+++ b/src/components/atoms/popover/__stories__/popover.stories.mdx
@@ -1,6 +1,6 @@
 import {Meta, Props, Story, Preview} from '@storybook/addon-docs/blocks'
-import Popover from '.'
-import Calendar from '../../molecules/Calendar'
+import Popover from '..'
+import Calendar from '../../../molecules/calendar'
 
 <Meta title="Atoms/Popover" component={Popover} />
 
