--- a/src/components/molecules/datepicker/__stories__/datepicker.stories.mdx
+++ b/src/components/molecules/datepicker/__stories__/datepicker.stories.mdx
@@ -1,5 +1,5 @@
 import {Meta, Props, Story, Preview} from '@storybook/addon-docs/blocks'
-import Datepicker from '.'
+import Datepicker from '..'
 
 <Meta title="Molecules/Datepicker" component={Datepicker} />
 
