--- a/src/components/molecules/formfield/__stories__/formfield.stories.mdx
+++ b/src/components/molecules/formfield/__stories__/formfield.stories.mdx
@@ -1,5 +1,5 @@
 import {Meta, Props, Story, Preview} from '@storybook/addon-docs/blocks'
-import FormField from '.'
+import FormField from '..'
 
 <Meta title="Molecules/FormField" component={FormField} />
 
