Update design system docs

--- a/src/docs/__stories__/intro.stories.mdx
+++ b/src/docs/__stories__/intro.stories.mdx
@@ -1,8 +1,8 @@
 import {Meta, Preview} from '@storybook/addon-docs/blocks'
-import Heading from '../components/atoms/heading'
-import FormField from '../components/molecules/FormField'
-import Datepicker from '../components/molecules/Datepicker'
-import Button from '../components/atoms/Button'
+import Heading from '../../components/atoms/heading'
+import FormField from '../../components/molecules/formfield'
+import Datepicker from '../../components/molecules/datepicker'
+import Button from '../../components/atoms/button'
 
 <Meta title="Design System/Intro" />
 
