Update behavior of datepicker

--- a/src/components/molecules/calendar/__stories__/calendar.stories.mdx
+++ b/src/components/molecules/calendar/__stories__/calendar.stories.mdx
@@ -6,7 +6,7 @@ import Calendar from '..'
 
 # Calendar
 
-Let's define a story for our `Calendar` component:
+`Calendar` component to show dates including the months, years and days of the week.
 
 <Preview>
   <Story name="Default">
@@ -44,7 +44,6 @@ Let's define a story for our `Calendar` component:
 ###### Values in the story
 
 ⋅ Date selected: **01/10/1994**
-⋅ _Founded date of The World Wide Web Consortium (W3C)_
 
 ### Selected date with a month and year
 
