--- a/src/components/molecules/datepicker/__stories__/datepicker.stories.mdx
+++ b/src/components/molecules/datepicker/__stories__/datepicker.stories.mdx
@@ -5,14 +5,55 @@ import Datepicker from '..'
 
 # Datepicker
 
-Let's define a story for our `Datepicker` component:
+Use this `Datepicker` to select a specific date on a form.
 
 <Preview>
   <Story name="default">
-    <Datepicker label="Label" name="formfield" />
+    <Datepicker label="Select a date" name="datepicker" />
   </Story>
 </Preview>
 
 ## Props
 
 <Props of={Datepicker} />
+
+## Stories
+
+### Selected month and year
+
+<Story name="Default month and year">
+  <Datepicker label="Select a date" name="datepicker" month={3} year={1955} />
+</Story>
+
+###### Values in the story
+
+⋅ Month: **March (3)**
+⋅ Year: **1955**
+
+### Selected date
+
+<Story name="Selected date">
+  <Datepicker label="Select a date" name="datepicker" date="01/10/1994" />
+</Story>
+
+###### Values in the story
+
+⋅ Date selected: **01/10/1994**
+
+### Selected date with a month and year
+
+<Story name="Selected date with a month and year">
+  <Datepicker
+    label="Select a date"
+    name="datepicker"
+    date="31/01/2020"
+    month={2}
+    year={2020}
+  />
+</Story>
+
+###### Values in the story
+
+⋅ Date selected: **31/01/2020** _(January)_
+⋅ Month: **February (2)**
+⋅ Year: **2020**
