--- a/src/components/molecules/datepicker/__stories__/datepicker.stories.mdx
+++ b/src/components/molecules/datepicker/__stories__/datepicker.stories.mdx
@@ -8,8 +8,8 @@ import Datepicker from '..'
 Use this `Datepicker` to select a specific date on a form.
 
 <Preview>
-  <Story name="default">
-    <Datepicker label="Select a date" name="datepicker" />
+  <Story name="Default">
+    <Datepicker label="Select a date" name="datepicker1" />
   </Story>
 </Preview>
 
@@ -22,7 +22,7 @@ Use this `Datepicker` to select a specific date on a form.
 ### Selected month and year
 
 <Story name="Default month and year">
-  <Datepicker label="Select a date" name="datepicker" month={3} year={1955} />
+  <Datepicker label="Select a date" name="datepicker2" month={3} year={1955} />
 </Story>
 
 ###### Values in the story
@@ -33,7 +33,7 @@ Use this `Datepicker` to select a specific date on a form.
 ### Selected date
 
 <Story name="Selected date">
-  <Datepicker label="Select a date" name="datepicker" date="01/10/1994" />
+  <Datepicker label="Select a date" name="datepicker3" date="01/10/1994" />
 </Story>
 
 ###### Values in the story
@@ -45,7 +45,7 @@ Use this `Datepicker` to select a specific date on a form.
 <Story name="Selected date with a month and year">
   <Datepicker
     label="Select a date"
-    name="datepicker"
+    name="datepicker4"
     date="31/01/2020"
     month={2}
     year={2020}
