--- a/src/components/molecules/formfield/__stories__/formfield.stories.mdx
+++ b/src/components/molecules/formfield/__stories__/formfield.stories.mdx
@@ -18,7 +18,7 @@ The `FormField` component are the text fields that users fill in with different 
 
 <Preview>
   <Story name="Default">
-    <FormField label="Label" name="formfield" />
+    <FormField label="Label" name="formfield1" />
   </Story>
 </Preview>
 
@@ -32,7 +32,7 @@ The `FormField` component are the text fields that users fill in with different 
 
 <Preview>
   <Story name="Placeholder">
-    <FormField label="Label" name="formfield" placeholder="Placeholder" />
+    <FormField label="Label" name="formfield2" placeholder="Placeholder" />
   </Story>
 </Preview>
 
@@ -42,7 +42,7 @@ The `FormField` component are the text fields that users fill in with different 
   <Story name="Default value">
     <FormField
       label="Label"
-      name="formfield"
+      name="formfield3"
       placeholder="Placeholder"
       value="Default value"
     />
@@ -53,7 +53,7 @@ The `FormField` component are the text fields that users fill in with different 
 
 <Preview>
   <Story name="Disabled">
-    <FormField label="Label" name="formfield" value="Default value" disabled />
+    <FormField label="Label" name="formfield4" value="Default value" disabled />
   </Story>
 </Preview>
 
@@ -61,7 +61,7 @@ The `FormField` component are the text fields that users fill in with different 
 
 <Preview>
   <Story name="Readonly">
-    <FormField label="Label" name="formfield" value="Default value" readonly />
+    <FormField label="Label" name="formfield5" value="Default value" readonly />
   </Story>
 </Preview>
 
