Add display name

--- a/src/components/atoms/input/__stories__/input.stories.mdx
+++ b/src/components/atoms/input/__stories__/input.stories.mdx
@@ -40,7 +40,7 @@ The `Input` component are the text fields that users fill in with different type
 
 <Preview>
   <Story name="Default value">
-    <Input placeholder="Placeholder" value="Default value" />
+    <Input placeholder="Placeholder" defaultValue="Default value" />
   </Story>
 </Preview>
 
@@ -48,7 +48,7 @@ The `Input` component are the text fields that users fill in with different type
 
 <Preview>
   <Story name="Disabled">
-    <Input placeholder="Placeholder" value="Default value" disabled />
+    <Input placeholder="Placeholder" defaultValue="Default value" disabled />
   </Story>
 </Preview>
 
@@ -56,7 +56,7 @@ The `Input` component are the text fields that users fill in with different type
 
 <Preview>
   <Story name="Readonly">
-    <Input placeholder="Placeholder" value="Default value" readonly />
+    <Input placeholder="Placeholder" defaultValue="Default value" readonly />
   </Story>
 </Preview>
 
