--- a/src/components/molecules/calendar/__stories__/calendar.stories.mdx
+++ b/src/components/molecules/calendar/__stories__/calendar.stories.mdx
@@ -53,6 +53,8 @@ import Calendar from '..'
   </Story>
 </Preview>
 
+> If you have a selected date and also a month and year, the indicated date will be selected but the month and year will be displayed on the calendar
+
 ###### Values in the story
 
 ⋅ Date selected: **31/01/2020** _(January)_
