--- a/src/components/molecules/formfield/__stories__/formfield.stories.mdx
+++ b/src/components/molecules/formfield/__stories__/formfield.stories.mdx
@@ -44,7 +44,7 @@ The `FormField` component are the text fields that users fill in with different 
       label="Label"
       name="formfield3"
       placeholder="Placeholder"
-      value="Default value"
+      defaultValue="Default value"
     />
   </Story>
 </Preview>
@@ -53,7 +53,12 @@ The `FormField` component are the text fields that users fill in with different 
 
 <Preview>
   <Story name="Disabled">
-    <FormField label="Label" name="formfield4" value="Default value" disabled />
+    <FormField
+      label="Label"
+      name="formfield4"
+      defaultValue="Default value"
+      disabled
+    />
   </Story>
 </Preview>
 
@@ -61,7 +66,12 @@ The `FormField` component are the text fields that users fill in with different 
 
 <Preview>
   <Story name="Readonly">
-    <FormField label="Label" name="formfield5" value="Default value" readonly />
+    <FormField
+      label="Label"
+      name="formfield5"
+      defaultValue="Default value"
+      readonly
+    />
   </Story>
 </Preview>
 
