--- a/src/components/atoms/popover/__stories__/popover.stories.mdx
+++ b/src/components/atoms/popover/__stories__/popover.stories.mdx
@@ -3,6 +3,20 @@ import {boolean} from '@storybook/addon-knobs'
 import Popover from '..'
 import Calendar from '../../../molecules/calendar'
 
+export const stylesStoryDefault = {
+  height: '80px',
+  marginBottom: '80px',
+  marginTop: '-80px',
+  position: 'relative'
+}
+
+export const stylesStoryCalendar = {
+  height: '380px',
+  marginBottom: '380px',
+  marginTop: '-380px',
+  position: 'relative'
+}
+
 export const knobsProps = () => ({
   isOpen: boolean('isOpen', true),
   closeOutside: boolean('closeOutside', false)
@@ -16,7 +30,7 @@ Let's define a story for our `Popover` component:
 
 <Preview>
   <Story name="Default">
-    <div style={{ height: '80px', marginBottom: '80px', marginTop: '-80px', position: 'relative' }}>
+    <div style={stylesStoryDefault}>
       <Popover isOpen>
         <span>...children</span>
       </Popover>
@@ -32,7 +46,7 @@ Let's define a story for our `Popover` component:
 
 <Preview>
   <Story name="With calendar">
-    <div style={{ height: '380px', marginBottom: '380px', marginTop: '-380px', position: 'relative' }}>
+    <div style={stylesStoryCalendar}>
       <Popover isOpen>
         <Calendar />
       </Popover>
@@ -44,7 +58,7 @@ Let's define a story for our `Popover` component:
 
 <Preview>
   <Story name="With calendar and close on click outside">
-    <div style={{ height: '380px', marginBottom: '380px', marginTop: '-380px', position: 'relative' }}>
+    <div style={stylesStoryCalendar}>
       <Popover isOpen closeOutside>
         <Calendar />
       </Popover>
@@ -56,7 +70,7 @@ Let's define a story for our `Popover` component:
 
 <Preview>
   <Story name="Knobs">
-    <div style={{ height: '380px', marginBottom: '380px', marginTop: '-380px', position: 'relative' }}>
+    <div style={stylesStoryCalendar}>
       <Popover {...knobsProps()}>
         <Calendar />
       </Popover>
